snapshots/syntax/statements/objects/mod/raiseevent_multiple_in_sequence.snap
---
source: src/syntax/statements/objects/mod.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SubStatement
      children:
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Test
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: RaiseEventStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: RaiseEventKeyword
                  text: RaiseEvent
                - kind: Whitespace
                  text: " "
                - kind: Identifier
                  text: BeforeUpdate
                - kind: Newline
                  text: "\n"
            - kind: RaiseEventStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: RaiseEventKeyword
                  text: RaiseEvent
                - kind: Whitespace
                  text: " "
                - kind: Identifier
                  text: Update
                - kind: LeftParenthesis
                  text: (
                - kind: Identifier
                  text: data
                - kind: RightParenthesis
                  text: )
                - kind: Newline
                  text: "\n"
            - kind: RaiseEventStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: RaiseEventKeyword
                  text: RaiseEvent
                - kind: Whitespace
                  text: " "
                - kind: Identifier
                  text: AfterUpdate
                - kind: Newline
                  text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
