snapshots/syntax/statements/objects/mod/raiseevent_preserves_whitespace.snap
---
source: src/syntax/statements/objects/mod.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Whitespace
      text: "    "
    - kind: RaiseEventStatement
      children:
        - kind: RaiseEventKeyword
          text: RaiseEvent
        - kind: Whitespace
          text: "    "
        - kind: Identifier
          text: DataReady
        - kind: Whitespace
          text: "  "
        - kind: LeftParenthesis
          text: (
        - kind: Whitespace
          text: "  "
        - kind: Identifier
          text: value
        - kind: Whitespace
          text: "  "
        - kind: RightParenthesis
          text: )
        - kind: Whitespace
          text: "    "
        - kind: Newline
          text: "\n"
